--- a/Udemy - Webdesign Front-end - HTML CSS JS/Seção 4 - Estrutura semântica e posicionamento/ProjetoCSS-inicio/index.html
+++ b/Udemy - Webdesign Front-end - HTML CSS JS/Seção 4 - Estrutura semântica e posicionamento/ProjetoCSS-inicio/index.html
@@ -22,7 +22,6 @@
     </header>
 
     <main>
-        <div class ="container">
             <section>
                 <article>
                     <header>
@@ -49,11 +48,10 @@
                 </article>
 
             </section>
-        </div>
     </main>
 
     <footer class = "rodape">
-        Copyright © 2016
+        Copyright &copy; 2024
     </footer>
 </body>
 </html>
